# buildin-test-ex

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: main.py
src/api/: __init__.py  exception_handlers.py
src/api/v1/incidents/: __init__.py  provider.py  router.py  scheams.py  services.py
src/core/: __init__.py  lifespan.py
src/core/config/: log_setup.py  settings.py
src/core/infra/: __init__.py  enums.py  exceptions.py  responses.py  schemas.py
src/database/: helper.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2025_11_10_0357-0cfb57931f73_initial_migration.py
src/database/models/: __init__.py  base.py  enums.py  incident.py
src/database/repositories/: __init__.py  base.py  incident_repo.py
src/guards/: __init__.py
src/providers/: __init__.py  db_provider.py
