[project]
name = "buildin-test-ex"
version = "0.1.0"
description = ""
authors = [
    {name = "lenny",email = "tokkaa@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "environs (>=14.5.0,<15.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "scalar-fastapi (>=1.4.3,<2.0.0)",
    "taskiq-fastapi (>=0.3.5,<0.4.0)",
    "taskiq-aio-pika (>=0.4.4,<0.5.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
